--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-    // ?date=YYYY-MM-DD を自動付与
+    // ?date=YYYY-MM-DD を自動付与// ?date=YYYY-MM-DD を自動付与
     (function(){
       const today = new Date().toISOString().slice(0,10);
       const params = new URLSearchParams(window.location.search);
