--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- ハートボタン -->
+    <!-- ハートボタン --><!-- ハートボタン -->
     <button id="heart" class="heart" type="button" aria-label="ハート"></button>
 
     <!-- フォーム -->
