--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- ハートボタン --><!-- ハートボタン -->
     <button id="heart" class="heart" type="button" aria-label="ハート"></button>
 
-    <!-- フォーム -->
+    <!-- フォーム --><!-- フォーム -->
     <form id="comment-form" class="form">
       <select id="form-category" required aria-label="カテゴリー">
         <option value="">カテゴリーを選択</option>
